# vvctre-plugin-make-all-settings-in-quick-settings-persistent

./: .gitmodules  CMakeLists.txt  common_types.h  example.json  plugin.cpp  settings.json  string_util.cpp  string_util.h
.github/: dependabot.yml
.github/workflows/: build.yml
